--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,13 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.testng:testng:7.1.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testImplementation group: 'org.testng', name: 'testng', version: '6.7'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '3.11.0'
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.0.3'
+    implementation group: 'org.seleniumhq.selenium', name: 'selenium-support', version: '3.14.0'
 
 }
 
