--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-chrome-driver', version: '3.11.0'
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.0.3'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-support', version: '3.14.0'
+    implementation 'com.google.code.gson:gson:2.8.9'
 
 }
 
