--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,11 @@ dependencies {
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-support', version: '3.14.0'
     implementation 'com.google.code.gson:gson:2.8.9'
 
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+    testCompileOnly 'org.projectlombok:lombok:1.18.22'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
+
 }
 
 test {
