--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,12 @@ dependencies {
     implementation group: 'io.github.bonigarcia', name: 'webdrivermanager', version: '5.0.3'
     implementation group: 'org.seleniumhq.selenium', name: 'selenium-support', version: '3.14.0'
     implementation 'com.google.code.gson:gson:2.8.9'
+    implementation group: 'com.aventstack', name: 'extentreports', version: '3.0.0'
+
+    compileOnly 'org.projectlombok:lombok:1.18.22'
+    annotationProcessor 'org.projectlombok:lombok:1.18.22'
+    testCompileOnly 'org.projectlombok:lombok:1.18.22'
+    testAnnotationProcessor 'org.projectlombok:lombok:1.18.22'
 
 }
 
